testsuite/tests/typecheck/should_fail/T15067.stderr

T15067.hs:9:14: error:
    • No instance for (Typeable
                         (# 'GHC.Types.BoxedRep 'GHC.Types.Lifted #))
        arising from a use of ‘typeRep’
        GHC can't yet do polykinded
          Typeable ((# 'GHC.Types.BoxedRep 'GHC.Types.Lifted #) :: *
                                                  -> *
                                                  -> TYPE
                                                     ('GHC.Types.SumRep
                                                       '[ 'GHC.Types.BoxedRep
                                                            'GHC.Types.Lifted,
                                                          'GHC.Types.BoxedRep
                                                            'GHC.Types.Lifted]))

    • In the expression: typeRep
      In an equation for ‘floopadoop’: floopadoop = typeRep
